# MoMLNIDS

./: .gitignore  DEMO_SCRIPTS_GUIDE.md  Pembelajaran Mesin.ipynb  README.md  TEXTUAL_TUI_GUIDE.md  USAGE_GUIDE.md  auto_prediction_demo.py  auto_prediction_demo.py.backup  comprehensive_evaluation.py  data_sample_viewer.py  demo_directory_structure.py  demo_enhanced_granular.py  demo_enhanced_visualizer.py  demo_sidang_enhanced.py  demo_sidang_enhanced_broken.py  demo_sidang_err.txt  demo_tui.py  demo_visualizer.py  enhanced_results_visualizer.py  experiment_comparison_report.txt  experiment_summary.txt  feature_summary.py  interactive_evaluation.py  launcher.py  main.py  main_config.py  main_improved.py  main_pseudo.py  main_pseudo_50.py  manualisasi.py  mnist_conv_autoencoder_weights.pth  momlnids_results_tui.py  momlnids_tui.py  of-farneback.py  of-lukas.py  prediction_demo.py  pyproject.toml  requirements-gpu.in  requirements-gpu.txt  requirements.in  (+17 more)
.github/workflows/: ci.yml  enhanced-features.yml
config/: baseline_config.yaml  default_config.yaml  experiment_config.yaml  quick_demo_config.yaml  quick_test_config.yaml  test_small_config.yaml
docs/: ENHANCED_FEATURES.md  PROJECT_ENHANCEMENT_SUMMARY.md  README.md  SMOKE_TEST_SUMMARY.md  TESTING.md  UV_WORKFLOW.md
documentation/: DOCUMENTATION_OVERVIEW.md  ENHANCED_DEMO_USAGE.md  ENHANCED_INTERACTIVE_EVALUATION_GUIDE.md  ENHANCED_VISUALIZER_GUIDE.md  MAIN_FUNCTIONS_SUMMARY.md  PREDICTION_DEMO_README.md  RESULTS_VISUALIZER_GUIDE.md  TUI_README.md
logs/: demo_sidang_enhanced_errors.txt
results/: comprehensive_NF_CSE_CIC_IDS2018_v2_20ep.json  comprehensive_NF_CSE_CIC_IDS2018_v2_50ep.json  comprehensive_NF_UNSW_NB15_v2_20ep.json  comprehensive_domain_generalization.json  demo_experiment_results.json  eval_NF-BoT-IoT-v2.json  eval_NF-CSE-CIC-IDS2018-v2.json  eval_NF-ToN-IoT-v2.json  eval_NF-UNSW-NB15-v2.json  final_demo_results.json  test_comprehensive_fixed.json
skripsi_code/TrainEval/: TrainEval.py
src/: main.py  main_config.py  main_config_broken.py  main_improved.py  main_legacy.py  main_pseudo.py  main_pseudo_50.py  manualisasi.py
tests/: Parsed_Layer_Details_Table.csv  parsed_data.csv  smoke_test.py  test.py  test_dataloader.py  test_imports.py
(+61 files in other folders)
