[project]
name = "skripsi-code"
version = "0.1.0"
description = "Research project for thesis work"
authors = [{name = "dzakirm", email = "malikdzaki16@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "black>=25.1.0",
    "captum>=0.7.0",
    "click>=8.2.1",
    "clicky>=0.3.2",
    "fastparquet>=2024.11.0",
    "graphviz>=0.21",
    "hydra-core>=1.3.2",
    "ipywidgets>=8.1.7",
    "isort>=6.0.1",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.3",
    "lightning>=2.5.2",
    "lime>=0.2.0.1",
    "matplotlib>=3.10.3",
    "memory-profiler>=0.61.0",
    "mlflow>=3.1.0",
    "mypy>=1.16.1",
    "networkx>=3.4.2",
    "notebook>=7.4.3",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "optuna>=4.4.0",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "polars>=1.31.0",
    "pre-commit>=4.2.0",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "pytorch-lightning>=2.5.2",
    "pyyaml>=6.0.2",
    "ray[tune]>=2.38.0",
    "rich>=14.0.0",
    "ruff>=0.12.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "snakeviz>=2.2.2",
    "tensorboard>=2.19.0",
    "textual>=4.0.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchmetrics>=1.7.3",
    "torchsummary>=1.5.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "typer>=0.16.0",
    "wandb>=0.20.1",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = { find = { include = ["skripsi_code*"], exclude = ["data*", "ProperTraining*", "Training_results*", "ProperTraining50Epoch*", "tests*"] } }

